--- a/MisEstilos.css
+++ b/MisEstilos.css
@@ -10,17 +10,23 @@ html {
 }
 
 body {
-    background: linear-gradient(90deg, #00D2FF 0%, #3A7BD5 100%);
+    background-image: url(Images/fondo.jpg);
+    object-fit: contain;
     display: flex;
     align-items: center;
     justify-content: center;
     min-height: 100vh;
 }
 
+::selection {
+    color: #fff;
+    background: #43AFFC;
+}
+
 .wrapper {
     width: 400px;
     background: #fff;
-    border-radius: 7px;
+    border-radius: 15px;
     box-shadow: 7px 7px 20px rgba(0, 0, 0, 0.05);
 }
 
@@ -123,7 +129,7 @@ header i {
 .input-part button {
     color: #fff;
     cursor: pointer;
-    background: linear-gradient(90deg, #A8FF78 0%, #78FFD6 100%);
+    background-color: turquoise;
     transition: 0.3s ease;
     color: black;
 }
@@ -196,7 +202,6 @@ header i {
 }
 
 .column i {
-    color: #5DBBFF;
     font-size: 40px;
 }
 
